--- a/ios/manifest.plist
+++ b/ios/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://cn.tradehero.mobi/CFD_Channel/ios/TH_CFD.ipa</string>
+					<string>https://github.com/shmyhero/web/blob/ffa8578ba63fead4aa57b29aab9f0924c5a3bfe7/ios/TH_CFD.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://cn.tradehero.mobi/CFD_Channel/ios/image57x57.png</string>
+					<string>https://github.com/shmyhero/web/blob/ffa8578ba63fead4aa57b29aab9f0924c5a3bfe7/ios/image57x57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://cn.tradehero.mobi/CFD_Channel/ios/image512x512.png</string>
+					<string>https://github.com/shmyhero/web/blob/ffa8578ba63fead4aa57b29aab9f0924c5a3bfe7/ios/image512x512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
